--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -37,7 +37,7 @@ Vagrant.configure(2) do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "../../", "/projects"
+  config.vm.synced_folder "../../", "/vagrant/projects"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -49,6 +49,9 @@ Vagrant.configure(2) do |config|
   #
   #   # Customize the amount of memory on the VM:
     vb.memory = "1024"
+    #By default, VirtualBox disables symlinks for security reasons. So we need to enable this in our Vagrantfile so we can use symlinks in the next steps. Make sure you use the full path to the shared directory on the guest’s VM, not the host’s.
+    vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/vagrant/projects", "1"]
+
   end
   #
   # View the documentation for the provider you are using for more
